--- a/web/src/app/element/icon.component.html
+++ b/web/src/app/element/icon.component.html
@@ -123,7 +123,7 @@
       <p>Set icon width, height to 1em for all modifier</p>
       <p>Set icon font-size to 1em, small: 0.75em, medium: 1.25em, large: 1.5em</p>
       <p>Two settings above make icon has same height as text</p>
-      <p>Add icon-text wrapper to make spacing between any element and icon</p>
+      <p>change icon-text to align items center, nowrap, and line height 1.5 same as text</p>
       <p>Add icon-img for icon image</p>
       <p>Custom icon margin inside button, navbar</p>
     </div>
