--- a/lib/src/base/_index.scss
+++ b/lib/src/base/_index.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import "./generic";
-@import "./elements-spacing";
-@import "./non-responsive-mobile";
-@import "./non-responsive-tablet";
+@forward "./generic";
+@forward "./elements-spacing";
+@forward "./non-responsive-mobile";
+@forward "./non-responsive-tablet";
