--- a/web/src/app/component/modal.component.html
+++ b/web/src/app/component/modal.component.html
@@ -135,8 +135,10 @@
       <p>$modal-full-height: 100%;</p>
       <p>$modal-card-head-box-shadow: none;</p>
       <p>$modal-card-body-font-weight: variables.$weight-normal;</p>
-      <p>$modal-close-background-color: bulmaRgba(variables.$scheme-invert, 0.2);</p>
-      <p>$modal-close-color: variables.$scheme-main;</p>
+      <p>$modal-close-background-color: inherit;</p>
+      <p>$modal-close-color: currentColor;</p>
+      <p>// if true, head background color does not change by is-[color].</p>
+      <p>$modal-card-custom-head: false;</p>
     </div>
 
     <h2 class="title is-3">Bulma Variables</h2>
