--- a/web/src/app/general/brick-block.component.html
+++ b/web/src/app/general/brick-block.component.html
@@ -44,8 +44,8 @@
       <div class="block">.block</div>
     </div>
 
-    other block element<br>
-    .box, .breadcrumb, .level, .message, .pagination, .tabs, .box, .content, .notification, .progress, .table
+    <p>Other block elements:</p>
+    <p>Include .box, .buttons, .card, and .skeleton-block</p>
     <div class="box">
       <div class="box">
         .box
@@ -55,7 +55,8 @@
       </div>
     </div>
 
-    other block element inside is-horizontal
+    <p>other block elements inside is-horizontal</p>
+    <p>Include .box, .buttons, .card, and .skeleton-block</p>
     <div class="box is-horizontal">
       <div class="box">
         .box
