--- a/lib/src/helpers/_index.scss
+++ b/lib/src/helpers/_index.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
-@import "./color";
-@import "./flexbox";
-@import "./other";
-@import "./spacing";
-@import "./typography";
+@forward "./color";
+@forward "./flexbox";
+@forward "./other";
+@forward "./spacing";
+@forward "./typography";
