--- a/web/src/app/general/brick-block.component.html
+++ b/web/src/app/general/brick-block.component.html
@@ -47,115 +47,115 @@
     <p>Other block elements:</p>
     <p>Include .box, .buttons, .card, and .skeleton-block</p>
     <div class="box">
-      <div class="box">
-        .box
+      <div class="box is-bordered">
+        .box.is-bordered
       </div>
-      <div class="box">
-        .box
+      <div class="box is-bordered">
+        .box.is-bordered
       </div>
     </div>
 
     <p>other block elements inside is-horizontal</p>
     <p>Include .box, .buttons, .card, and .skeleton-block</p>
     <div class="box is-horizontal">
-      <div class="box">
-        .box
+      <div class="box is-bordered">
+        .box.is-bordered
       </div>
-      <div class="box">
-        .box
+      <div class="box is-bordered">
+        .box.is-bordered
       </div>
     </div>
 
     force space
     <div class="box">
-      <div class="box space-0">
+      <div class="box is-bordered space-0">
         .space-0
       </div>
-      <div class="box space-1">
+      <div class="box is-bordered space-1">
         .space-1
       </div>
-      <div class="box space-2">
+      <div class="box is-bordered space-2">
         .space-2
       </div>
-      <div class="box space-3">
+      <div class="box is-bordered space-3">
         .space-3
       </div>
-      <div class="box space-4">
+      <div class="box is-bordered space-4">
         .space-4
       </div>
-      <div class="box space-5">
+      <div class="box is-bordered space-5">
         .space-5
       </div>
-      <div class="box space-6">
+      <div class="box is-bordered space-6">
         .space-6
       </div>
-      <div class="box space-6">
+      <div class="box is-bordered space-6">
         .space-6 last-child
       </div>
     </div>
 
     force space inside is-horizontal
     <div class="box is-horizontal">
-      <div class="box space-0">
+      <div class="box is-bordered space-0">
         .space-0
       </div>
-      <div class="box space-1">
+      <div class="box is-bordered space-1">
         .space-1
       </div>
-      <div class="box space-2">
+      <div class="box is-bordered space-2">
         .space-2
       </div>
-      <div class="box space-3">
+      <div class="box is-bordered space-3">
         .space-3
       </div>
-      <div class="box space-4">
+      <div class="box is-bordered space-4">
         .space-4
       </div>
-      <div class="box space-5">
+      <div class="box is-bordered space-5">
         .space-5
       </div>
-      <div class="box space-6">
+      <div class="box is-bordered space-6">
         .space-6
       </div>
-      <div class="box space-6">
+      <div class="box is-bordered space-6">
         .space-6 last-child
       </div>
     </div>
 
     responsive force space
     <div class="box">
-      <div class="box space-0-mobile">
+      <div class="box is-bordered space-0-mobile">
         .space-0-mobile
       </div>
-      <div class="box space-0-touch">
+      <div class="box is-bordered space-0-touch">
         .space-0-touch
       </div>
-      <div class="box space-0-tablet">
+      <div class="box is-bordered space-0-tablet">
         .space-0-tablet
       </div>
-      <div class="box space-0-desktop">
+      <div class="box is-bordered space-0-desktop">
         .space-0-desktop
       </div>
-      <div class="box space-0">
+      <div class="box is-bordered space-0">
         .space-0
       </div>
     </div>
 
     responsive force space inside is-horizontal
     <div class="box is-horizontal">
-      <div class="box space-0-mobile">
+      <div class="box is-bordered space-0-mobile">
         .space-0-mobile
       </div>
-      <div class="box space-0-touch">
+      <div class="box is-bordered space-0-touch">
         .space-0-touch
       </div>
-      <div class="box space-0-tablet">
+      <div class="box is-bordered space-0-tablet">
         .space-0-tablet
       </div>
-      <div class="box space-0-desktop">
+      <div class="box is-bordered space-0-desktop">
         .space-0-desktop
       </div>
-      <div class="box space-0">
+      <div class="box is-bordered space-0">
         .space-0
       </div>
     </div>
