--- a/web/src/app/layout/section.component.html
+++ b/web/src/app/layout/section.component.html
@@ -15,7 +15,7 @@
     <h2 class="title is-3">Basic Usage</h2>
 
     <div class="block">
-      <section class="section bg-primary">
+      <section class="section bg-light">
         <div class="container">
           .section
         </div>
@@ -25,7 +25,7 @@
     <h2 class="title is-3">Modifier</h2>
 
     <div class="block">
-      <section class="section bg-primary is-fit">
+      <section class="section bg-light is-fit">
         <div class="container">
           .is-fit
         </div>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="block">
-      <section class="section bg-primary is-small">
+      <section class="section bg-light is-small">
         <div class="container">
           .is-small
         </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="block">
-      <section class="section bg-primary is-medium">
+      <section class="section bg-light is-medium">
         <div class="container">
           .is-medium
         </div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="block">
-      <section class="section bg-primary is-large">
+      <section class="section bg-light is-large">
         <div class="container">
           .is-large
         </div>
