--- a/web/src/app/home.component.html
+++ b/web/src/app/home.component.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
 
-    <h1 class="title is-1">Getting Start</h1>
+    <h1 class="title is-1">Getting Started</h1>
 
     <h2 class="title is-3">1. Create _variables.scss</h2>
     <div class="block">
