--- a/web/src/app/element/button.component.html
+++ b/web/src/app/element/button.component.html
@@ -22,6 +22,57 @@
 
     <h2 class="title is-3">Modifier</h2>
 
+    <p class="brick">.is-[color]</p>
+    <div class="block">
+      <button class="button is-primary">
+        is-primary
+      </button>
+      <button class="button is-secondary">
+        is-secondary
+      </button>
+      <button class="button is-warning">
+        is-warning
+      </button>
+    </div>
+
+    <p class="brick">.is-outlined</p>
+    <div class="block">
+      <button class="button is-primary is-outlined">
+        is-primary.is-outlined
+      </button>
+      <button class="button is-secondary is-outlined">
+        is-secondary.is-outlined
+      </button>
+      <button class="button is-warning is-outlined">
+        is-warning.is-outlined
+      </button>
+    </div>
+
+    <p class="brick">.is-loading</p>
+    <div class="block">
+      <button class="button is-primary is-loading">
+        loading
+      </button>
+      <button class="button is-secondary is-loading">
+        loading
+      </button>
+      <button class="button is-warning is-loading">
+        loading
+      </button>
+    </div>
+    <div class="block">
+      <button class="button is-primary is-loading is-outlined">
+        loading
+      </button>
+      <button class="button is-secondary is-loading is-outlined">
+        loading
+      </button>
+      <button class="button is-warning is-loading is-outlined">
+        loading
+      </button>
+    </div>
+
+    <p class="brick">is-[size]</p>
     <div class="block">
       <button class="button is-fat">
         .is-fat
